--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libs/pegkit"]
 	path = libs/pegkit
-	url = github-ArtisOracle:itod/pegkit.git
+	url = https://github.com/itod/pegkit.git
